@@ -1,41 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    i18n_domain="z3c">
-
-  <utility
-      component=".password.PasswordManagerNamesVocabulary"
-      name="Password Manager Names"
-      provides=".interfaces.IPasswordManager"
-      />
-
-  <class class=".password.PlainTextPasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
-
-  <utility
-      name="Plain Text"
-      provides=".interfaces.IPasswordManager"
-      factory=".password.PlainTextPasswordManager"
-      />
-
-  <class class=".password.MD5PasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
-
-  <utility
-      name="MD5"
-      provides=".interfaces.IPasswordManager"
-      factory=".password.MD5PasswordManager"
-      />
-
-  <class class=".password.SHA1PasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
-
-  <utility
-      name="SHA1"
-      provides=".interfaces.IPasswordManager"
-      factory=".password.SHA1PasswordManager"
-      />
-
-</configure>
